Update the documentation

--- a/docs/host_api_reference/main.tex
+++ b/docs/host_api_reference/main.tex
@@ -33,7 +33,7 @@
 \newcommand{\cs}[1]{\texttt{\textbackslash #1}}
 
 % Frontmatter data; appears on title page
-\title{User Manual \\Symphony}
+\title{Host API reference \\Symphony}
 \version{1.0}
 \author{Eslab}
 
